Updated html need padding

--- a/legends.html
+++ b/legends.html
@@ -34,7 +34,7 @@
           <div class="logo">
 
     <!-- Logo and header -->
-            <img src="img/temp_logo.png">
+            <img src="img/temp_logo.png" alt="logo">
           </div>
           <h1> Sports Legends</h1>
         </div>
@@ -96,7 +96,6 @@
             <p>Dave Albritton (1936)</p>
             <p>East Tech (Track)</p>
             <div id="daveAlbritton" class="moreInfo">
-              </p>
             </div>
           </div>
           <div class="profileImage">
@@ -387,7 +386,7 @@
       <div class="profileRow">
         <div class="profileImage">
           <div class="circularImage">
-            <img src="img/football.png" alt="Football" Champs">
+            <img src="img/football.png" alt="Football Champs">
           </div>
           <p>FOOTBALL</p>
           <p>1 Win/2 Runner Up</p>
@@ -455,45 +454,48 @@
       </div>
     </div>
   </section>
-<footer>
-  <!-- Social Media -->
-  <div class="media">
-  <!-- This links icons -->
 
-  <!-- Add font awesome icons -->
-  <a href="https://www.facebook.com/Sports-Legends-of-CMSD-672657253199161/?modal=admin_todo_tour/" class="fa fa-facebook"></a>
-  <a href="https://twitter.com/CMSDlegends/" class="fa fa-twitter"></a>
-  <a href="https://www.instagram.com/sportslegendsofcmsd/" class="fa fa-instagram"></a>
+  <header>
+    <!-- Social Media -->
+    <div class="media">
+    <!-- This links icons -->
 
-  </div>
-    <div class="title">
-      <div class="title-item">&nbsp;</div>
-      <div class="title-item-grow">
-        <div class="logo">
+    <!-- Add font awesome icons -->
+    <a href="https://www.facebook.com/Sports-Legends-of-CMSD-672657253199161/?modal=admin_todo_tour/" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/CMSDlegends/" class="fa fa-twitter"></a>
+    <a href="https://www.instagram.com/sportslegendsofcmsd/" class="fa fa-instagram"></a>
 
-  <!-- Logo and header -->
-          <img src="img/temp_logo.png">
+    </div>
+      <div class="title">
+        <div class="title-item">&nbsp;</div>
+        <div class="title-item-grow">
+          <div class="logo">
+
+    <!-- Logo and header -->
+            <img src="img/temp_logo.png" alt="logo">
+          </div>
+          <h1> Sports Legends</h1>
         </div>
-        <h1> Sports Legends</h1>
+
+        <div class="title-item">&nbsp;</div>
       </div>
 
-      <div class="title-item">&nbsp;</div>
-    </div>
+    <!-- Nav links -->
+      <nav>
+          <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="legends.html">Legends</a></li>
+            <li><a href="">Donate</a></li>
+            <li><a href="a">Contact</a></li>
+            <li><a href="events.html">Event</a></li>
+            <li><a href="">Store</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Share Your Legend</a></li>
+          </ul>
 
-  <!-- Nav links -->
-    <nav>
-        <ul>
-          <li><a href="about.html">About</a></li>
-          <li><a href="legends.html">Legends</a></li>
-          <li><a href="">Donate</a></li>
-          <li><a href="a">Contact</a></li>
-          <li><a href="events.html">Event</a></li>
-          <li><a href="">Store</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Share Your Legend</a></li>
-        </ul>
+      </nav>
 
-    </nav>
-  </footer>
+  </header>
+
 </body>
 </html>
