--- a/legends.html
+++ b/legends.html
@@ -455,6 +455,10 @@
     </div>
   </section>
 
+
+<div class="footerspace">
+</div>
+
   <header>
     <!-- Social Media -->
     <div class="media">
