--- a/events.html
+++ b/events.html
@@ -21,9 +21,9 @@
 <!-- This links icons -->
 
 <!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-instagram"></a>
+<a href="https://www.facebook.com/Sports-Legends-of-CMSD-672657253199161/?modal=admin_todo_tour/" class="fa fa-facebook"></a>
+<a href="https://twitter.com/CMSDlegends/" class="fa fa-twitter"></a>
+<a href="https://www.instagram.com/sportslegendsofcmsd/" class="fa fa-instagram"></a>
 
 </div>
   <div class="title">
@@ -35,9 +35,10 @@
         <img src="img/temp_logo.png">
       </div>
       <h1> Sports Legends</h1>
+    </div>
+
     <div class="title-item">&nbsp;</div>
   </div>
-</div>
 
 <!-- Nav links -->
   <nav>
@@ -62,15 +63,21 @@
     <h3>Saturday, October 19 2019  |  6pm - 11pm</h3>
 
     <div class="largemedia">
+      <div>
       <div class="icon">
-        <img src="img/facebook_circle.png" alt="facebook">
+        <a href="#"><img src="img/facebook_circle.png" alt="facebook"></a>
       </div>
+    </div>
+    <div>
       <div class="icon">
         <img src="img/Twitter_circle.png" alt="Twitter">
       </div>
+    </div>
+    <div>
       <div class="icon">
-        <img src="img/Instagram_circle.png" alt="Instagram">
+        <a href="https://www.instagram.com/sportslegendsofcmsd"><img src="img/Instagram_circle.png" alt="Instagram"></a>
       </div>
+    </div>
     </div>
 
     <h4>Glasscock Family Ballroom</h4>
@@ -110,23 +117,32 @@
 
 
 <footer>
-  <nav>
-  <!-- Social Media -->
+  <div class="footercolor">
   <div class="media">
   <!-- This links icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- Add font awesome icons -->
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-instagram"></a>
+  <a href="https://www.facebook.com/Sports-Legends-of-CMSD-672657253199161/?modal=admin_todo_tour" class="fa fa-facebook"></a>
+  <a href="https://twitter.com/CMSDlegends" class="fa fa-twitter"></a>
+  <a href="https://www.instagram.com/sportslegendsofcmsd/" class="fa fa-instagram"></a>
 
   </div>
-
+    <div class="title">
+      <div class="title-item">&nbsp;</div>
+      <div class="title-item-grow">
+        <div class="logo">
 
   <!-- Logo and header -->
-          <img class="logo" src="img/temp_logo.png">
-          <h1> Sports Legends</h1>
+          <img src="img/temp_logo.png">
+        </div>
+        <h1> Sports Legends</h1>
+      </div>
+
+      <div class="title-item">&nbsp;</div>
+    </div>
+
   <!-- Nav links -->
+    <nav>
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="legends.html">Legends</a></li>
@@ -139,6 +155,7 @@
         </ul>
 
     </nav>
+  </div>
 </footer>
 </body>
 </html>
