Links to Social media added

--- a/events.html
+++ b/events.html
@@ -65,12 +65,12 @@
     <div class="largemedia">
       <div>
       <div class="icon">
-        <a href="#"><img src="img/facebook_circle.png" alt="facebook"></a>
+        <a href="https://www.facebook.com/Sports-Legends-of-CMSD-672657253199161/?modal=admin_todo_tour/"><img src="img/facebook_circle.png" alt="facebook"></a>
       </div>
     </div>
     <div>
       <div class="icon">
-        <img src="img/Twitter_circle.png" alt="Twitter">
+        <a href="https://twitter.com/CMSDlegends/"><img src="img/Twitter_circle.png" alt="Twitter"></a>
       </div>
     </div>
     <div>
