--- a/about.html
+++ b/about.html
@@ -46,8 +46,7 @@
   <div class="top">
     <div class="texthead">
     <h2> SPORTS LEGENDS OF CLEVELAND</h2>
-    <p> Meet our passionate team of people who are making the CMSD Legends Project happen. Each member an important role ibn the development of this prohect, and work together to shine a light on the legends of this talented city. These dedicated
-      members are the talent behind the cameras, and are comitted every step of the way</p>
+    <p> Students, friends, family members, community members we are all legends. These are our sports legends. Bred in Cleveland. When tested they will not falter. Faster, stronger, and more dexterous, with strong constitutions and wills they rise above the rest.</p>
     </div>
     <div class="numbers">
       <div class="stats">
@@ -73,7 +72,7 @@
   <div class="text_bloc">
     <h2> THE LEGENDS TEAM </h2>
     <p> meet our passionate team of people who are making the CMSD Legends Project happen. Each member an important role ibn the development of this prohect, and work together to shine a light on the legends of this talented city. These dedicated
-      members are the talent behind the cameras, and are comitted every step of the way</p>
+      members are the talent behind the cameras, and are comitted every step of the way.</p>
 
 
 </div>
