--- a/legends.html
+++ b/legends.html
@@ -34,7 +34,7 @@
           <div class="logo">
 
     <!-- Logo and header -->
-            <img src="img/temp_logo.png" alt="logo">
+            <img src="img/temp_logo.png">
           </div>
           <h1> Sports Legends</h1>
         </div>
@@ -56,7 +56,6 @@
           </ul>
 
       </nav>
-
   </header>
 
 
@@ -476,7 +475,7 @@
           <div class="logo">
 
     <!-- Logo and header -->
-            <img src="img/temp_logo.png" alt="logo">
+            <img src="img/temp_logo.png">
           </div>
           <h1> Sports Legends</h1>
         </div>
