--- a/legends.html
+++ b/legends.html
@@ -455,8 +455,8 @@
   </section>
 
 
-
-<header>
+</body>
+<footer>
     <!-- Social Media -->
     <div class="media">
     <!-- This links icons -->
@@ -495,14 +495,13 @@
           </ul>
 
       </nav>
-
-  </header>
-
-
 <div class="footerspace">
 </div>
+  </footer>
 
-</body>
+
+
+
 
 
 </html>
