--- a/about.html
+++ b/about.html
@@ -84,20 +84,20 @@
     <!-- Full-width images with number and caption text -->
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="img/photo1.jpg" style="width:100%">
-      <div class="text">Caption Text</div>
+      <img src="img/nichole.jpg" style="width:100%">
+      <div class="text">Nicole Antoinette Smith</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="img/photo1.jpg" style="width:100%">
-      <div class="text">Caption Two</div>
+      <img src="img/jim.jpg" style="width:100%">
+      <div class="text">Jim Khaler</div>
     </div>
 
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="img/photo1.jpg" style="width:100%">
-      <div class="text">Caption Three</div>
+      <img src="img/dell.jpg" style="width:100%">
+      <div class="text">Dell D. Robinson</div>
     </div>
 
     <!-- Next and previous buttons -->
@@ -148,7 +148,35 @@
 </body>
 
 <footer>
+  <nav>
+  <!-- Social Media -->
+  <div class="media">
+  <!-- This links icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Add font awesome icons -->
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-instagram"></a>
 
+  </div>
+
+
+  <!-- Logo and header -->
+          <img class="logo" src="img/temp_logo.png">
+          <h1> Sports Legends</h1>
+  <!-- Nav links -->
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="legends.html">Legends</a></li>
+          <li><a href="">Donate</a></li>
+          <li><a href="a">Contact</a></li>
+          <li><a href="events.html">Event</a></li>
+          <li><a href="">Store</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Share Your Legend</a></li>
+        </ul>
+
+    </nav>
 </footer>
 
 </html>
