--- a/about.html
+++ b/about.html
@@ -16,30 +16,41 @@
     <nav>
       <!-- Social Media -->
       <div class="media">
-        <!-- This links icons -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!-- Add font awesome icons -->
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-instagram"></a>
+      <!-- This links icons -->
+
+      <!-- Add font awesome icons -->
+      <a href="https://www.facebook.com/Sports-Legends-of-CMSD-672657253199161/?modal=admin_todo_tour/" class="fa fa-facebook"></a>
+      <a href="https://twitter.com/CMSDlegends/" class="fa fa-twitter"></a>
+      <a href="https://www.instagram.com/sportslegendsofcmsd/" class="fa fa-instagram"></a>
 
       </div>
-
+        <div class="title">
+          <div class="title-item">&nbsp;</div>
+          <div class="title-item-grow">
+            <div class="logo">
 
       <!-- Logo and header -->
-      <img class="logo" src="img/temp_logo.png">
-      <h1> Sports Legends</h1>
+              <img src="img/temp_logo.png">
+            </div>
+            <h1> Sports Legends</h1>
+          </div>
+
+          <div class="title-item">&nbsp;</div>
+        </div>
+
       <!-- Nav links -->
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="legends.html">Legends</a></li>
-        <li><a href="">Donate</a></li>
-        <li><a href="a">Contact</a></li>
-        <li><a href="events.html">Event</a></li>
-        <li><a href="">Store</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Share Your Legend</a></li>
-      </ul>
+        <nav>
+            <ul>
+              <li><a href="about.html">About</a></li>
+              <li><a href="legends.html">Legends</a></li>
+              <li><a href="">Donate</a></li>
+              <li><a href="a">Contact</a></li>
+              <li><a href="events.html">Event</a></li>
+              <li><a href="">Store</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Share Your Legend</a></li>
+            </ul>
+
     </nav>
   </header>
 
