--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <div class="logo">
 
       <!-- Logo and header -->
-              <img src="img/temp_logo.png">
+              <a href="index.html"><img src="img/temp_logo.png"></a>
             </div>
             <h1> Sports Legends</h1>
           </div>
