--- a/legends.html
+++ b/legends.html
@@ -34,7 +34,7 @@
           <div class="logo">
 
     <!-- Logo and header -->
-            <img src="img/temp_logo.png">
+            <a href="index.html"><img src="img/temp_logo.png"></a>
           </div>
           <h1> Sports Legends</h1>
         </div>
